# synaps-cad

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/actions/hyper-workspace/: action.yml
.github/scripts/: build-web.sh  test-ci.sh
.github/workflows/: ci.yml  pages.yml  release.yml
benches/: compile_default.rs
src/: app_config.rs  export.rs  lib.rs  main.rs
src/compiler/: mod.rs  types.rs
src/compiler/evaluator/: booleans.rs  builtins.rs  mod.rs  primitives.rs  tests.rs  transformations.rs  value.rs
src/compiler/geometry/: conversions.rs  mod.rs
src/compiler/rendering/: colors.rs  fonts.rs  mod.rs
src/plugins/: ai_chat.rs  camera.rs  code_editor.rs  compilation.rs  mod.rs  persistence.rs  scene.rs
src/plugins/ui/: chat.rs  editor.rs  layout.rs  mod.rs  resources.rs  systems.rs  theme.rs  utils.rs  viewport.rs
tests/: generate_references.sh
web/: index.html
