[package]
name = "synaps-cad"
license = "GPL-3.0-or-later"
authors = ["Bernhard Janetzki <boerni@gmail.com>"]
repository = "https://github.com/ierror/synaps-cad"
homepage = "https://github.com/ierror/synaps-cad"
readme = "README.md"
version = "0.10.1"
edition = "2024"
publish = false

[dependencies]
bevy = "0.15"
bevy_egui = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
reqwest = { version = "0.13", features = ["json"] }
# Hyper sibling dependency switch: keep both local path and crates.io lines; do not remove either.
# Development mode uses the local path line. For release, comment it and uncomment the crates.io line.
csgrs = { path = "../csgrs", features = ["chull-io", "offset"] }
# csgrs = { version = "0.23.0", features = ["chull-io", "offset"] }
nalgebra = "0.34"
hyperlattice = { path = "../hyperlattice" }
hyperreal = { path = "../hyperreal", optional = true, features = ["dispatch-trace"] }
url = "2"
web-time = "1"

# OpenSCAD parser
openscad-rs = "0.1.0"
rfd = "0.17.2"
ttf-parser = "0.25"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3"
chrono = "0.4"
dirs = "6"
genai = "=0.6.0-beta.3"
lib3mf = { version = "0.1.5", default-features = false }
open = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen-futures = "0.4"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[patch.crates-io]
hypercurve = { path = "../hypercurve" }
hyperlattice = { path = "../hyperlattice" }
hyperlimit = { path = "../hyperlimit" }
hypermesh = { path = "../hypermesh" }
hyperphysics = { path = "../hyperphysics" }
hyperreal = { path = "../hyperreal" }
hypersdf = { path = "../hypersdf" }
hypersolve = { path = "../hypersolve" }
hypertri = { path = "../hypertri" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
too_many_lines = "allow"

# Run clippy and tests before cargo-release creates a version bump commit
[package.metadata.release]
pre-release-hook = ["cargo", "clippy", "--", "-D", "warnings"]

[[bench]]
name = "compile_default"
harness = false

[features]
default = []
dispatch-trace = [
    "csgrs/dispatch-trace",
    "dep:hyperreal",
]
